// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative zookeepermetadata.proto

syntax = "proto3";

package zookeepermetadata;

option go_package = "github.com/scalog/scalog/zookeepermetadata";

message MetadataListItem {
  int32 shardId = 1;
  int64 GSN = 2;
}

message FetchOneRequest {
  int64 gsn = 1;
}

message FetchOneResponse {
  int32 shardId = 1;
}

message FetchAllRequest {
}

message FetchAllResponse {
  repeated MetadataListItem metadata_list = 1;
}

service ZooKeeper {
  rpc FetchOne (FetchOneRequest) returns (FetchOneResponse);
  rpc FetchAll (FetchAllRequest) returns (FetchAllResponse);
}
